--- a/1-amazoncorretto/alpine3.17/Dockerfile
+++ b/1-amazoncorretto/alpine3.17/Dockerfile
@@ -1,5 +1,7 @@
 FROM naxgrp/alpine:3.17
 
+ARG VERSION
+
 # Sourced from
 # https://hub.docker.com/layers/library/amazoncorretto/19-alpine3.17/images/sha256-cd7b4a7e3daf05961375138c3cfbe91d14028842f544bad04e40fdebeaf05db3?context=explore
 # Note: removed corretto-19 specific version
@@ -13,7 +15,7 @@ RUN wget -O /THIRD-PARTY-LICENSES-20200824.tar.gz https://corretto.aws/downloads
     SHA_SUM="6cfdf08be09f32ca298e2d5bd4a359ee2b275765c09b56d514624bf831eafb91" && \
     echo "${SHA_SUM}  /etc/apk/keys/amazoncorretto.rsa.pub" | sha256sum -c - && \
     echo "https://apk.corretto.aws" >> /etc/apk/repositories && \
-    apk add --no-cache amazon-corretto-19
+    apk add --no-cache amazon-corretto-${VERSION}
 
 ENV LANG=C.UTF-8
 ENV JAVA_HOME=/usr/lib/jvm/default-jvm
