--- a/1-rust/bullseye/Dockerfile
+++ b/1-rust/bullseye/Dockerfile
@@ -32,5 +32,5 @@ RUN set -eux; \
 
 RUN apt-get update && \
     apt-get install -y \
-    gcc \
+    gcc curl pkg-config \
     && rm -rf /var/lib/apt/lists/*
