--- a/1-node/bullseye/Dockerfile
+++ b/1-node/bullseye/Dockerfile
@@ -2,6 +2,9 @@ FROM naxgrp/debian:bullseye
 
 ARG VERSION
 
+RUN groupadd --gid 1000 node \
+  && useradd --uid 1000 --gid node --shell /bin/bash --create-home node
+
 RUN wget -qO - https://deb.nodesource.com/setup_${VERSION}.x | bash - && \
     apt-get install -y nodejs && \
     rm -rf /var/lib/apt/lists/*
