instal gcc g++ and make

--- a/1-node/bullseye/Dockerfile
+++ b/1-node/bullseye/Dockerfile
@@ -6,7 +6,7 @@ RUN groupadd --gid 1000 node \
   && useradd --uid 1000 --gid node --shell /bin/bash --create-home node
 
 RUN wget -qO - https://deb.nodesource.com/setup_${VERSION}.x | bash - && \
-    apt-get install -y nodejs && \
+    apt-get install -y nodejs gcc g++ make && \
     rm -rf /var/lib/apt/lists/*
 
 RUN npm install -g yarn
