--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -34,6 +34,7 @@ jobs:
         with:
           images: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            naxgrp.jfrog.io/nax-platform-docker/${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=raw,value=${{ matrix.version_tag }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -49,6 +50,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN_RW }}
+      - name: Login to Artifactory Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: naxgrp.jfrog.io
+          username: ${{ secrets.ARTIFACTORY_USERNAME }}
+          password: ${{ secrets.ARTIFACTORY_IDENTITY_TOKEN }}
       - name: Build and push
         id: build-push
         uses: docker/build-push-action@v3
@@ -110,6 +117,7 @@ jobs:
         with:
           images: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            naxgrp.jfrog.io/nax-platform-docker/${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=raw,value=${{ matrix.version_tag }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -125,6 +133,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN_RW }}
+      - name: Login to Artifactory Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: naxgrp.jfrog.io
+          username: ${{ secrets.ARTIFACTORY_USERNAME }}
+          password: ${{ secrets.ARTIFACTORY_IDENTITY_TOKEN }}
       - name: Build and push
         id: build-push
         uses: docker/build-push-action@v3
@@ -165,6 +179,7 @@ jobs:
         with:
           images: |
             ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            naxgrp.jfrog.io/nax-platform-docker/${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=raw,value=${{ matrix.version_tag }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -180,6 +195,12 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN_RW }}
+      - name: Login to Artifactory Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: naxgrp.jfrog.io
+          username: ${{ secrets.ARTIFACTORY_USERNAME }}
+          password: ${{ secrets.ARTIFACTORY_IDENTITY_TOKEN }}
       - name: Build and push
         id: build-push
         uses: docker/build-push-action@v3
