--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -33,8 +33,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
-            naxgrp.jfrog.io/nax-platform-docker/${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            naxgrp.jfrog.io/nax-platform-docker/${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=raw,value=${{ matrix.version_tag }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -48,7 +48,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN_RW }}
       - name: Login to Artifactory Container Registry
         uses: docker/login-action@v2
@@ -69,8 +69,12 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache,mode=max
+          cache-from: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache
+          cache-to: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache,mode=max
+      - name: Record Summary
+        run: |
+          echo "### Docker Tags" >> $GITHUB_STEP_SUMMARY
+          echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
   lang:
     needs:
       - base
@@ -116,8 +120,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
-            naxgrp.jfrog.io/nax-platform-docker/${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            naxgrp.jfrog.io/nax-platform-docker/${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=raw,value=${{ matrix.version_tag }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -131,7 +135,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN_RW }}
       - name: Login to Artifactory Container Registry
         uses: docker/login-action@v2
@@ -153,8 +157,12 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache,mode=max
+          cache-from: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache
+          cache-to: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache,mode=max
+      - name: Record Summary
+        run: |
+          echo "### Docker Tags" >> $GITHUB_STEP_SUMMARY
+          echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
   app:
     needs:
       - base
@@ -170,6 +178,13 @@ jobs:
             version_arg: "^0.1" # version of cargo-chef
             image_tag_arg: "bullseye" # latest version of rust
             variants: "linux/amd64"
+          - name: cloudfront-invalidator
+            version_tag: "latest-aws-cli"
+            dockerfile: 2-cloudfront-invalidator/aws-cli/Dockerfile
+            context: 2-cloudfront-invalidator/aws-cli
+            version_arg: "" # unused
+            image_tag_arg: "latest"
+            variants: "linux/amd64"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -178,8 +193,8 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
-            naxgrp.jfrog.io/nax-platform-docker/${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            ${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
+            naxgrp.jfrog.io/nax-platform-docker/${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}
           tags: |
             type=raw,value=${{ matrix.version_tag }}-{{date 'YYYYMMDD'}},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=raw,value=${{ matrix.version_tag }},enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
@@ -193,7 +208,7 @@ jobs:
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN_RW }}
       - name: Login to Artifactory Container Registry
         uses: docker/login-action@v2
@@ -216,5 +231,9 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache
-          cache-to: type=registry,ref=${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache,mode=max
+          cache-from: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache
+          cache-to: type=registry,ref=${{ vars.DOCKERHUB_USERNAME }}/${{ matrix.name }}:${{ matrix.version_tag }}-buildcache,mode=max
+      - name: Record Summary
+        run: |
+          echo "### Docker Tags" >> $GITHUB_STEP_SUMMARY
+          echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
