--- a/2-cloudfront-invalidator/aws-cli/Dockerfile
+++ b/2-cloudfront-invalidator/aws-cli/Dockerfile
@@ -1,7 +1,8 @@
 ARG IMAGE_TAG
-FROM naxgrp/aws-cli:${IMAGE_TAG}
+FROM amazon/aws-cli:${IMAGE_TAG}
 
 WORKDIR ./
+RUN yum install -y jq
 
 COPY . .
 
