--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -117,6 +117,11 @@ jobs:
             dockerfile: 1-aws-cli/al2/Dockerfile
             conetxt: 1-aws-cli/al2
             version_arg: "latest"
+          - name: golang
+            version_tag: 1.21
+            dockerfile: 1-golang/alpine3.17/Dockerfile
+            context: 1-golang/alpine3.17
+            version_arg: "" #unused
     steps:
       - name: Checkout
         uses: actions/checkout@v3
