--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -25,10 +25,6 @@ jobs:
             version_tag: bullseye
             dockerfile: 0-debian/bullseye/Dockerfile
             context: 0-debian/bullseye
-          - name: python
-            version_tag: bullseye
-            dockerfile: 0-python/bullseye/Dockerfile
-            context: 0-python/bullseye
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -121,6 +117,10 @@ jobs:
             dockerfile: 1-aws-cli/al2/Dockerfile
             conetxt: 1-aws-cli/al2
             version_arg: "latest"
+          - name: python3
+            version_tag: python3.11.6-bullseye
+            dockerfile: 1-python/bullseye/Dockerfile
+            context: 1-python/bullseye
     steps:
       - name: Checkout
         uses: actions/checkout@v3
