--- a/0-ubuntu/jammy/Dockerfile
+++ b/0-ubuntu/jammy/Dockerfile
@@ -1,10 +1,10 @@
-FROM debian:bullseye AS pkgsum
+FROM ubuntu:jammy AS pkgsum
 
 ARG CACHE_BUST
 ENV CACHE_BUST=${CACHE_BUST}
 
 # DEVNOTE: Make sure the list of packages also matches the list below!!
-# DEVNOTE: Make sure this is the same as 0-UBUNTU variants for consistency
+# DEVNOTE: Make sure this is the same as 0-DEBIAN variants for consistency
 RUN apt-get update && \
     apt-get upgrade -y && \
     apt-get install -y \
@@ -15,7 +15,7 @@ RUN apt-get update && \
 RUN debsums --silent --all --generate=missing
 RUN cat /var/lib/dpkg/info/*.md5sums | sha256sum | cut -d' ' -f1 > /var/lib/dpkg/sha256sum
 
-FROM debian:bullseye
+FROM ubuntu:jammy
 
 # This will override the cache if any packages were upgraded
 COPY --from=pkgsum /var/lib/dpkg/sha256sum /var/lib/dpkg/sha256sum
@@ -29,6 +29,6 @@ RUN apt-get update && \
     && rm -rf /var/lib/apt/lists/*
 
 ENV BASE_IMAGE_MAINTAINER "nax-platform"
-ENV BASE_IMAGE_OS "debian"
-ENV BASE_IMAGE_OS_VERSION "bullseye"
+ENV BASE_IMAGE_OS "ubuntu"
+ENV BASE_IMAGE_OS_VERSION "jammy"
 ENV BASE_IMAGE_OS_PKGSUM_FILE="/var/lib/dpkg/sha256sum"
