--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -21,6 +21,10 @@ jobs:
             version_tag: "3.17"
             dockerfile: 0-alpine/3.17/Dockerfile
             context: 0-alpine/3.17
+          - name: alpine
+            version_tag: "3.18"
+            dockerfile: 0-alpine/3.18/Dockerfile
+            context: 0-alpine/3.18
           - name: debian
             version_tag: bullseye
             dockerfile: 0-debian/bullseye/Dockerfile
