--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -103,20 +103,30 @@ jobs:
             context: 1-node/bullseye
             version_arg: "16"
           - name: python
-            version_tag: 3-bullseye
-            dockerfile: 1-python/bullseye/Dockerfile
-            context: 1-python/bullseye
+            version_tag: "3"
+            dockerfile: 1-python/jammy/Dockerfile
+            context: 1-python/jammy
             version_arg: "3.11"
           - name: python
-            version_tag: 3.10-bullseye
-            dockerfile: 1-python/bullseye/Dockerfile
-            context: 1-python/bullseye
+            version_tag: 3-jammy
+            dockerfile: 1-python/jammy/Dockerfile
+            context: 1-python/jammy
+            version_arg: "3.11"
+          - name: python
+            version_tag: 3.11-jammy
+            dockerfile: 1-python/jammy/Dockerfile
+            context: 1-python/jammy
+            version_arg: "3.11"
+          - name: python
+            version_tag: "3.10"
+            dockerfile: 1-python/jammy/Dockerfile
+            context: 1-python/jammy
             version_arg: "3.10"
           - name: python
-            version_tag: 3.11-bullseye
-            dockerfile: 1-python/bullseye/Dockerfile
-            context: 1-python/bullseye
-            version_arg: "3.11"
+            version_tag: 3.10-jammy
+            dockerfile: 1-python/jammy/Dockerfile
+            context: 1-python/jammy
+            version_arg: "3.10"
           - name: rust
             version_tag: 1.71.0-bullseye
             dockerfile: 1-rust/bullseye/Dockerfile
