--- a/1-python/jammy/Dockerfile
+++ b/1-python/jammy/Dockerfile
@@ -11,7 +11,7 @@ RUN echo "deb http://ppa.launchpad.net/deadsnakes/ppa/ubuntu jammy main" > /etc/
     echo "deb-src http://ppa.launchpad.net/deadsnakes/ppa/ubuntu jammy main" >> /etc/apt/sources.list.d/deadsnakes.list && \
     apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F23C5A6CF475977595C89F51BA6932366A755776 && \
     apt-get update && \
-    apt-get install -y curl python${VERSION} python${VERSION}-dev python${VERSION}-venv && \
+    apt-get install -y curl python${VERSION} python${VERSION}-dev && \
     curl -fsSL https://github.com/pypa/get-pip/raw/4cfa4081d27285bda1220a62a5ebf5b4bd749cdb/public/get-pip.py | python${VERSION} && \
     pip install --no-cache-dir pipx==1 && \
     rm -rf /var/lib/apt/lists/*
