--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -114,19 +114,14 @@ jobs:
             version_tag: "3"
             dockerfile: 1-python/jammy/Dockerfile
             context: 1-python/jammy
-            version_arg: "3.11"
-          - name: python
-            version_tag: 3-jammy
-            dockerfile: 1-python/jammy/Dockerfile
-            context: 1-python/jammy
-            version_arg: "3.11"
-          - name: python
-            version_tag: 3.11-jammy
-            dockerfile: 1-python/jammy/Dockerfile
-            context: 1-python/jammy
-            version_arg: "3.11"
+            version_arg: "3.10"
           - name: python
             version_tag: "3.10"
+            dockerfile: 1-python/jammy/Dockerfile
+            context: 1-python/jammy
+            version_arg: "3.10"
+          - name: python
+            version_tag: 3-jammy
             dockerfile: 1-python/jammy/Dockerfile
             context: 1-python/jammy
             version_arg: "3.10"
@@ -135,6 +130,16 @@ jobs:
             dockerfile: 1-python/jammy/Dockerfile
             context: 1-python/jammy
             version_arg: "3.10"
+          - name: python
+            version_tag: "3.11"
+            dockerfile: 1-python/jammy/Dockerfile
+            context: 1-python/jammy
+            version_arg: "3.11"
+          - name: python
+            version_tag: 3.11-jammy
+            dockerfile: 1-python/jammy/Dockerfile
+            context: 1-python/jammy
+            version_arg: "3.11"
           - name: rust
             version_tag: 1.71.0-bullseye
             dockerfile: 1-rust/bullseye/Dockerfile
