--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -115,6 +115,11 @@ jobs:
             dockerfile: 1-node/bullseye/Dockerfile
             context: 1-node/bullseye
             version_arg: "18"
+          - name: node
+            version_tag: 20-bullseye
+            dockerfile: 1-node/bullseye/Dockerfile
+            context: 1-node/bullseye
+            version_arg: "20"
           - name: python
             version_tag: "3"
             dockerfile: 1-python/jammy/Dockerfile
