--- a/0-alpine/3.18/Dockerfile
+++ b/0-alpine/3.18/Dockerfile
@@ -9,6 +9,7 @@ RUN apk update && \
     apk upgrade --no-cache
 
 # Calculate the sum of all installed packages, which will override Docker cache if something changed
+RUN mkdir -p /var/lib/apk/
 RUN apk info -vv | awk '/^\/[^\/]/{print $1}' | xargs sha256sum | sha256sum | cut -d ' ' -f 1 > /var/lib/apk/sha256sum
 
 FROM alpine:3.18
