--- a/2-dogshell/jammy/Dockerfile
+++ b/2-dogshell/jammy/Dockerfile
@@ -1,6 +1,7 @@
 FROM naxgrp/python:3.11-jammy
 
 RUN pip install datadog
+RUN apt-get update && apt-get install -y jq
 
 COPY entrypoint.sh ./entrypoint.sh
 
